# json-schema-enforcer

./: AUTHORS  Makefile.am  Makefile.in  README  configure  configure.ac  json-schema-enforcer.conf.in
.github/workflows/: c-cpp.yml
foo/: lexer-array-maxItems.ll  lexer-array-minItems-additionalItems.ll  lexer-array-string-format-additionalItems5.ll  lexer-array-string-format-all.ll  lexer-array-string-format-not-first-or-last1.ll  lexer-array-string-format-not-first-or-last2.ll  lexer-array-string-format-not-first-or-last4.ll  lexer-object-integer-all.ll  lexer-object-pattern-properties2.ll  lexer-object-properties3.ll  lexer-string-pattern.ll  lexer-string.ll  parser-array-maxItems-additionalItems.yy  parser-array-maxItems.yy  parser-array-minItems-additionalItems.yy  parser-array-string-format-additionalItems5.yy  parser-array-string-format-all.yy  parser-array-string-format-not-first-or-last1.yy  parser-array-string-format-not-first-or-last2.yy  parser-array-string-format-not-first-or-last3.yy  parser-array-string-format-not-first-or-last4.yy  parser-array-string.yy  parser-number-enum.yy  parser-object-integer-all.yy  parser-object-pattern-properties1.yy  parser-object-pattern-properties2.yy  parser-object-properties1.yy  parser-object-properties2.yy  parser-object-properties3.yy  parser-string-pattern.yy  parser-string.yy  stype-array-maxItems-additionalItems.hh  stype-array-maxItems.hh  stype-array-minItems-additionalItems.hh  stype-array-string-format-additionalItems5.hh  stype-array-string-format-not-first-or-last1.hh  stype-array-string-format-not-first-or-last2.hh  stype-array-string-format-not-first-or-last3.hh  stype-array-string-format-not-first-or-last4.hh  stype-array-string.hh  (+9 more)
include/: JsonSchemaEnforcer.hh
m4/: ax_prog_flex_version.m4
src/include/: FormatType-vars.hh  FormatType.hh  ItemType-vars.hh  ItemType.hh  JsonItem.hh  ParsedItemData-vars.hh  ParsedItemData.hh  SchemaData.hh  SchemaItem-vars.hh  SchemaItem.hh  SchemaObject.hh  Token-vars.hh  Token.hh  json.hh  schema-stype.hh  stddefs.hh  yyscan.hh
src/json/: json-schema-enforcer.conf.schema.json
src/progs/: json-schema-tool.cc
src/schema/: FormatType.cc  ItemType.cc  JsonItem.cc  ParsedItemData.cc  SchemaData.cc  SchemaItem.cc  SchemaObject.cc  Token.cc  schema-lexer.ll  schema-parser.yy
src/templates/: json.cc  json.hh
tests/: unittest.cc
tests/classes/: test-FormatType-class.cc  test-ItemType-class.cc  test-JsonItem-class.cc  test-ParsedItemData-class.cc  test-SchemaItem-class.cc  test-Token-class.cc
tests/emit-parser-output/: lexer-array-integer-all.ll  lexer-array-integer.ll  lexer-array-maxItems-additionalItems.ll  lexer-array-maxItems-single.ll  lexer-array-maxItems.ll  lexer-array-minItems-additionalItems.ll  lexer-array-minItems-single.ll  lexer-array-minItems.ll  lexer-array-number-all.ll  lexer-array-number.ll  lexer-array-object.ll  lexer-array-string-all.ll  lexer-array-string-format-additionalItems1.ll  lexer-array-string-format-additionalItems2.ll  lexer-array-string-format-additionalItems3.ll  lexer-array-string-format-additionalItems4.ll  lexer-array-string-format-additionalItems5.ll  lexer-array-string-format-additionalItems6.ll  lexer-array-string-format-all.ll  lexer-array-string-format-first.ll  lexer-array-string-format-last.ll  lexer-array-string-format-not-first-or-last1.ll  lexer-array-string-format-not-first-or-last2.ll  lexer-array-string-format-not-first-or-last3.ll  lexer-array-string-format-not-first-or-last4.ll  lexer-array-string-format-only.ll  lexer-array-string-format-singleton.ll  lexer-array-string.ll  lexer-array-unique-false.ll  lexer-array-unique-true.ll  lexer-array.ll  lexer-integer-all.ll  lexer-integer-enum.ll  lexer-integer-exclusiveMaximum.ll  lexer-integer-exclusiveMinimum.ll  lexer-integer-maximum.ll  lexer-integer-minimum.ll  lexer-integer-multipleOf.ll  lexer-integer.ll  lexer-number-all.ll  (+170 more)
tests/include/: Bar.hh  flag-macros.hh  var-obj-macros.hh
tests/json/: test-object-1.json
tests/json/emit-parser-inputs/: array-integer-all.json  array-items-all.json  array-maxItems-additionalItems.json  array-maxItems-single.json  array-maxItems.json  array-minItems-additionalItems.json  array-minItems-single.json  array-minItems.json  array-number-all.json  array-object.json  array-string-all.json  array-string-format-additionalItems1.json  array-string-format-additionalItems2.json  array-string-format-additionalItems3.json  array-string-format-additionalItems4.json  array-string-format-additionalItems5.json  array-string-format-additionalItems6.json  array-string-format-all.json  array-string-format-first.json  array-string-format-last.json  array-string-format-not-first-or-last1.json  array-string-format-not-first-or-last2.json  array-string-format-not-first-or-last3.json  array-string-format-not-first-or-last4.json  array-string-format-only.json  array-string-format-singleton.json  array-unique-false.json  array-unique-true.json  integer-all.json  integer-enum.json  integer-exclusiveMaximum.json  integer-float.json  integer-maximum.json  integer-minimum.json  integer-multipleOf.json  number-all.json  number-enum.json  number-exclusiveMaximum.json  number-multipleOf.json  object-array.json  (+19 more)
tests/json/parse-schema-inputs/: integer-exclusiveMinimum.json  number-exclusiveMinimum.json  number-maximum.json  number-minimum.json  number_enum.json  string-minLength.json  string-pattern.json
tests/output/: test-Json-class.cc
tests/parse-schema/: test-parse-schema-integer.cc  test-parse-schema-number.cc  test-parse-schema-string.cc
tests/parser-gen/: test-emit-parser.cc  test-parse-json.cc
